--- a/src/Components/Home/HeaderCover/HeaderCover.css
+++ b/src/Components/Home/HeaderCover/HeaderCover.css
@@ -4,10 +4,15 @@
 .header-description h1{
  color: rgb(19, 78, 105);
 }
+.resume-btn{
+    color: white;
+    text-decoration: none;
+}
 .header-description button{
     margin-left: 10px;
     padding: 5px;
    }
+  
 .header-img{
     border-radius: 5px;
     animation-name: upDown;
